--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -46,7 +46,7 @@ block content
                         p.page-header-text.md-5 Nikhil Yedulla is pursuing a medical degree at Wayne State University School of Medicine. Nikhil brings his experience in telehealth research at Henry Ford Health System and medtech commercialization as CMO of Surgicure Technologies. Nikhil studied biological science and economics at Wayne State University. 
                             a.icon-list-social-link(href='https://www.linkedin.com/in/nikhil-yedulla-3a7048142', target='_blank')
                                 i.fab.fa-linkedin
-                        p.page-header-text.md-5 Sabrina Dass is pursing a medical degree at Wayne State University School of Medicine. She has worked with many underserved patients in both the Flint and Detroit communities, witnessing barriers to health care and how telehealth can improve access for those who need it most. Sabrina studied chemistry at Kalamazoo College.
+                        p.page-header-text.md-5 Sabrina Dass is pursuing a medical degree at Wayne State University School of Medicine. She has worked with many underserved patients in both the Flint and Detroit communities, witnessing barriers to health care and how telehealth can improve access for those who need it most. Sabrina studied chemistry at Kalamazoo College.
                             a.icon-list-social-link(href='https://www.linkedin.com/in/sabrina-dass-199b13a6/', target='_blank')
                                 i.fab.fa-linkedin
                         h1.pt-4 Our Story 
