update to your health center

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -35,7 +35,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Text message onboarding to virtual care
-                        p.page-header-text.mb-5 Connecting patients to your virtual clinic and the digital resources needed to access virtual care
+                        p.page-header-text.mb-5 Connecting patients to your health center and the digital resources needed to access virtual care
                         .row.align-items-center
                             .col-lg-6.pt-4
                                 a.btn.btn-teal.btn-marketing.rounded-pill(href='features.html') See Features
