--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -93,7 +93,7 @@ block content
                 .col-lg-5
                     img.img-fluid(src='assets/img/svgs/remote-work-man.svg').mb-5
                 .col-lg-7
-                    h1.page-header-title Wing reaches patients where they are over text in English, Chinese and Spanish to share resources and schedule appointmentss
+                    h1.page-header-title Wing reaches patients where they are over SMS-based text messaging in English, Chinese and Spanish to share resources and schedule appointmentss
 
             .mt-5.text-center
                 a.btn.btn-teal.btn-marketing.rounded-pill(href='features.html') Features
