--- a/src/pug/pages/mixins/navbar.pug
+++ b/src/pug/pages/mixins/navbar.pug
@@ -20,9 +20,9 @@ mixin navbar(options)
                     //- li.nav-item
                     //-     a.nav-link(href='provider.html')
                     //-         | For providers
-                    li.nav-item
-                        a.nav-link(href='about.html')
-                            | About us
+                    //- li.nav-item
+                    //-     a.nav-link(href='about.html')
+                    //-         | About us
                     li.nav-item
                         a.nav-link(href='contact.html')
                             | Contact
