should be at new domain?

--- a/src/pug/layouts/default.pug
+++ b/src/pug/layouts/default.pug
@@ -2,7 +2,7 @@ doctype html
 
 //- Default layout configuration fallback
 block config
-    - var pageTitle = "Wing"
+    - var pageTitle = "Telex"
 
 html(lang='en')
 
