--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -3,7 +3,7 @@ extends ../layouts/default.pug
 block config
 
     //- Global Page Configuration
-    - var pageTitle = 'Wing'
+    - var pageTitle = 'Telex'
 
 
 block content
@@ -73,7 +73,7 @@ block content
                 .col-lg-5
                     img.img-fluid(src='assets/img/svgs/holding-phone-colour.svg').mb-5
                 .col-lg-7
-                    h1.page-header-title Wing connects patients to nearby computers, tablets, smartphones, affordable cellular data plans and home WIFI options
+                    h1.page-header-title Telex connects patients to nearby computers, tablets, smartphones, affordable cellular data plans and home WIFI options
                     p.page-header-text 
 
             .mt-5.text-center
@@ -93,7 +93,7 @@ block content
                 .col-lg-5
                     img.img-fluid(src='assets/img/svgs/remote-work-man.svg').mb-5
                 .col-lg-7
-                    h1.page-header-title Wing reaches patients where they are over SMS-based text messaging in English, Chinese and Spanish to share resources and schedule appointmentss
+                    h1.page-header-title Telex reaches patients where they are over SMS-based text messaging in English, Chinese and Spanish to share resources and schedule appointmentss
 
             .mt-5.text-center
                 a.btn.btn-teal.btn-marketing.rounded-pill(href='features.html') Features
