--- a/src/pug/pages/individual.pug
+++ b/src/pug/pages/individual.pug
@@ -3,7 +3,7 @@ extends ../layouts/default.pug
 block config
 
     //- Global Page Configuration
-    - var pageTitle = 'Wing'
+    - var pageTitle = 'Telex'
 
 
 block content
@@ -32,7 +32,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Local care for individuals
-                        p.page-header-text.mb-5 Wing connects you to telehealth delivered one-on-one, privately and confidentially, with a nearby professional via messaging, phone or video chat
+                        p.page-header-text.mb-5 Telex connects you to telehealth delivered one-on-one, privately and confidentially, with a nearby professional via messaging, phone or video chat
                     .col-lg-5
                         img.img-fluid(src='assets/img/svgs/mask-man.svg')        
                 .row.pt-4
@@ -41,7 +41,7 @@ block content
                             .card-body.p-5
                                 .text-center
                                     .h1 Meet local health care professionals 
-                                    .p.text-dark Wing connects individuals to local community providers offering virtual services
+                                    .p.text-dark Telex connects individuals to local community providers offering virtual services
 
                     .col-lg-4.mb-5.mb-lg-0
                         .card.h-100
