--- a/src/pug/pages/mixins/footer.pug
+++ b/src/pug/pages/mixins/footer.pug
@@ -9,7 +9,7 @@ mixin footer(options)
                 .row
                     .col-lg-3
                         .footer-brand
-                            | Wing Health
+                            | Telex Health
                         .mb-3 Text message onboarding to virtual care
                         .mb-3 
                             a(href=href='contact.html') Contact us
@@ -86,7 +86,7 @@ mixin footer(options)
                 .row.align-items-center
 
                     .col-md-6.small
-                        | Copyright &copy; Wing Health 2020
+                        | Copyright &copy; Telex Health 2020
                     //- .col-md-6.text-md-right.small
                     //-     a(href='javascript:void(0);') Privacy Policy
                     //-     | 
