--- a/src/pug/pages/provider.pug
+++ b/src/pug/pages/provider.pug
@@ -3,7 +3,7 @@ extends ../layouts/default.pug
 block config
 
     //- Global Page Configuration
-    - var pageTitle = 'Wing'
+    - var pageTitle = 'Telex'
 
 
 block content
@@ -61,7 +61,7 @@ block content
                 .row.align-items-center.text-center.pt-4
                     .col-lg-12
                         h1 Be discovered by patients in your community seeking virtual care
-                        p A Wing representitive will reach out within 48 hous
+                        p A Telex representitive will reach out within 48 hous
                 .row.align-items-center.pt-4  
                     .col-lg-2
                     .col-lg-8
