--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -3,7 +3,7 @@ extends ../layouts/default.pug
 block config
 
     //- Global Page Configuration
-    - var pageTitle = 'Wing'
+    - var pageTitle = 'Telex'
 
 
 block content
@@ -35,7 +35,7 @@ block content
                     .col-lg-8
                         h1.page-header-title.pt-4 About us
                         h1.pt-4 Mission
-                        p.page-header-text.md-5.pt-4 Wing exists to increase equitable access to virtual health care in a COVID-19 world
+                        p.page-header-text.md-5.pt-4 Telex exists to increase equitable access to virtual health care in a COVID-19 world
                         h1.pt-4 Team
                         p.page-header-text.md-5.pt-4 Stephen Grinich is an engineer with experience building telemedicine and digital health products. Stephen studied health care innovation at UCSF Innovation Ventures and computer science, mathematics and health economics at Carleton College. 
                             a.icon-list-social-link(href='https://www.linkedin.com/in/stephengrinich', target='_blank')
@@ -50,7 +50,7 @@ block content
                             a.icon-list-social-link(href='https://www.linkedin.com/in/sabrina-dass-199b13a6/', target='_blank')
                                 i.fab.fa-linkedin
                         h1.pt-4 Our Story 
-                        p.page-header-text.md-5.pt-4 The team met at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a> and coalesced around the idea of hyperlocal telehealth delivery within their local communities. We were selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world. Wing has also participated in the Sling Health Bootcamp and UCSF COVID-19 Hackathon.
+                        p.page-header-text.md-5.pt-4 The team met at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a> and coalesced around the idea of hyperlocal telehealth delivery within their local communities. We were selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world. Telex has also participated in the Sling Health Bootcamp and UCSF COVID-19 Hackathon.
 
 block footer
 
