--- a/src/pug/pages/contact.pug
+++ b/src/pug/pages/contact.pug
@@ -4,7 +4,7 @@ extends ../layouts/default.pug
 block config
 
     //- Global Page Configuration
-    - var pageTitle = 'Wing'
+    - var pageTitle = 'Telex'
 
 
 block content
