--- a/src/pug/pages/schedule-demo.pug
+++ b/src/pug/pages/schedule-demo.pug
@@ -3,7 +3,7 @@ extends ../layouts/default.pug
 block config
 
     //- Global Page Configuration
-    - var pageTitle = 'Wing'
+    - var pageTitle = 'Telex'
 
 
 block content
@@ -42,7 +42,7 @@ block content
                 .row.align-items-center.text-center.pt-4
                     .col-lg-12
                         h1.page-header-title Learn about our text messaging assistant
-                        p.text-dark.pt-4 A Wing representitive will reach out to see how we can bring our automated assitant to your health center and patients
+                        p.text-dark.pt-4 A Telex representitive will reach out to see how we can bring our automated assitant to your health center and patients
 
                 .row.align-items-center.pt-4
                     .col-lg-2
