--- a/src/pug/layouts/includes/head/icons.pug
+++ b/src/pug/layouts/includes/head/icons.pug
@@ -1,4 +1,4 @@
-link(rel='icon', type='image/x-icon', href='assets/img/square-icon.png')
+link(rel='icon', type='image/x-icon', href='assets/img/telex-icon.png')
 
 script(data-search-pseudo-elements, defer, src='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js', crossorigin="anonymous")
 
