--- a/src/pug/pages/contact.pug
+++ b/src/pug/pages/contact.pug
@@ -32,7 +32,7 @@ block content
                 .row.justify-content-center
                     .col-lg-12.text-center
                         h1.page-header-title Want to get in touch?
-                        h1.pt-4 Reach out to our team at <a href="tel:(415) 413-7136‬">(415) 413-7136</a> or <a href="mailto:contact@wing.health‬">contact@wing.health</a>
+                        h1.pt-4 Reach out to our team at <a href="tel:(415) 413-7136‬">(415) 413-7136</a> or via <a href="mailto:sgrinich@gmail.com‬">email</a>
                         
 
         .container.pt-4
@@ -68,4 +68,4 @@ block footer
     +footer({
         footerBg: 'bg-dark',
         footerStyle: 'footer-dark'
-    })
+    })  
