--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -34,7 +34,7 @@ block content
             .container
                 .row.align-items-center
                     .col-lg-7
-                        h1.page-header-title Text message onboarding to virtual care
+                        h1.page-header-title Text based digital front door to your virtual clinic
                         p.page-header-text.mb-5 Connecting patients to your health center and the digital resources needed to access virtual care
                         .row.align-items-center
                             .col-lg-6.pt-4
@@ -93,7 +93,7 @@ block content
                 .col-lg-5
                     img.img-fluid(src='assets/img/svgs/remote-work-man.svg').mb-5
                 .col-lg-7
-                    h1.page-header-title Telex reaches patients where they are over SMS-based text messaging in English, Chinese and Spanish to share resources and schedule appointmentss
+                    h1.page-header-title Telex reaches patients where they are over SMS-based text messaging in English, Chinese and Spanish to share resources and schedule appointments
 
             .mt-5.text-center
                 a.btn.btn-teal.btn-marketing.rounded-pill(href='features.html') Features
