--- a/src/pug/pages/features.pug
+++ b/src/pug/pages/features.pug
@@ -40,7 +40,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Guide patients to digital devices
-                        p.page-header-text.mb-5 The Telex virtual assistant guides individuals to affordable laptops, tablets and smartphones
+                        p.page-header-text.mb-5 Telex guides individuals to affordable laptops, tablets and smartphones
                     .col-lg-5
                         img.img-fluid(src='assets/img/screenshot-sms/device-resources.png' style="max-height: 700px")        
 
@@ -72,7 +72,7 @@ block content
                 .row.align-items-center
                     .col-lg-7
                         h1.page-header-title Schedule visits
-                        p.page-header-text.mb-5 Our virtual assistant schedules appointments at your health center's vitual clinic
+                        p.page-header-text.mb-5 Telex schedules appointments at your health center's vitual clinic
                     .col-lg-5
                         img.img-fluid(src='assets/img/screenshot-sms/schedule.png' style="max-height: 700px")        
 
